salesforce-main/src/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>