salesforce-main/src/main/default/objects/Lead/fields/Anticipated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Start_Date__c</fullName>
    <label>Anticipated Start Date</label>
    <type>Date</type>
</CustomField>