salesforce-main/src/main/default/objects/Lead/fields/App_Notifications_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>App_Notifications_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App Notifications Opt In</label>
    <type>Checkbox</type>
</CustomField>