salesforce-main/src/main/default/objects/Lead/fields/Application_completed_received__c.field-meta.xml
<CustomField>
    <fullName>Application_completed_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application completed/ received</label>
    <type>Checkbox</type>
</CustomField>