salesforce-main/src/main/default/objects/Lead/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Interest__c</fullName>
    <label>Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;T</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>