salesforce-main/src/main/default/objects/Lead/fields/Attach_PE_assessment_to_lead_record__c.field-meta.xml
<CustomField>
    <fullName>Attach_PE_assessment_to_lead_record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach PE assessment to lead record</label>
    <type>Checkbox</type>
</CustomField>