salesforce-main/src/main/default/objects/Lead/fields/Available_Levy__c.field-meta.xml
<CustomField>
    <fullName>Available_Levy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available Levy?</label>
    <type>Checkbox</type>
</CustomField>