salesforce-main/src/main/default/objects/Lead/fields/Book_PE_assessment_FU_meeting__c.field-meta.xml
<CustomField>
    <fullName>Book_PE_assessment_FU_meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Book PE assessment FU meeting</label>
    <type>Checkbox</type>
</CustomField>