salesforce-main/src/main/default/objects/Lead/fields/BPP_BPP_Qualified__c.field-meta.xml
<CustomField>
    <fullName>BPP_BPP_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is checked when the lead is manually put into a Qualified status. Indicator that the lead has been qualified by a member of the BPP team</description>
    <label>BPP Qualified</label>
    <type>Checkbox</type>
</CustomField>