salesforce-main/src/main/default/objects/Lead/fields/BPP_BPP_Qualified_Indicator__c.field-meta.xml
<CustomField>
    <fullName>BPP_BPP_Qualified_Indicator__c</fullName>
    <description>Has been qualified by internal BPP team. Tick if the BPP Qualified checkbox = TRUE</description>
    <formula>IF( BPP_BPP_Qualified__c = TRUE,
IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Lead Qualified by BPP&quot;),
NULL)</formula>
    <label>BPP Qualified</label>
    <type>Text</type>
</CustomField>