salesforce-main/src/main/default/objects/Lead/fields/BPP_Lead_Cycle__c.field-meta.xml
<CustomField>
    <fullName>BPP_Lead_Cycle__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of times the lead has entered a contact cycle. Starting at 1 for new leads &amp; increments every time the unqualified lead is re-engaged</description>
    <label>Lead Cycle</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>