salesforce-main/src/main/default/objects/Lead/fields/BPP_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_Qualified_Date__c</fullName>
    <description>Date the lead is qualified by QC agent prior to transferring for conversion</description>
    <label>Qualified Date</label>
    <type>DateTime</type>
</CustomField>