salesforce-main/src/main/default/objects/Lead/fields/BPP_Qualifying_Agent__c.field-meta.xml
<CustomField>
    <fullName>BPP_Qualifying_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of QC agent that qualified the lead before transfer to sales process</description>
    <label>Qualifying Agent</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>QC Mgmt</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>QC</value>
        </filterItems>
        <infoMessage>Select the name of the qualifying agent from the QC team</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>