salesforce-main/src/main/default/objects/Lead/fields/Brand_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Brand_of_Interest__c</fullName>
    <description>Brand from the BPP Group that lead is interested in</description>
    <label>Brand of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BPP_Brands</valueSetName>
    </valueSet>
</CustomField>