salesforce-main/src/main/default/objects/Lead/fields/Company_Employees_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Company_Employees_Grouping__c</fullName>
    <label>Company Employees Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-250</fullName>
            </value>
            <value>
                <fullName>250-500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>1000-5000</fullName>
            </value>
            <value>
                <fullName>5000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>