salesforce-main/src/main/default/objects/Lead/fields/Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Birth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as per JIRA BPPBAU-2331</description>
    <inlineHelpText>Select the Country of Birth</inlineHelpText>
    <label>Country of Birth</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Leads (Country list)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>