salesforce-main/src/main/default/objects/Lead/fields/Country_of_Residence_old__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence_old__c</fullName>
    <label>Country of Residence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>