salesforce-main/src/main/default/objects/Lead/fields/Course_of_Interest_Score__c.field-meta.xml
<CustomField>
    <fullName>Course_of_Interest_Score__c</fullName>
    <description>Course of Interest lead score</description>
    <formula>CASE( Course_of_Interest_Scoring_Band__c ,
&apos;1&apos;,100,
&apos;2&apos;, 75,
&apos;3&apos;, 60,
&apos;4&apos;, 50,
&apos;5&apos;, 40,
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course of Interest Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>