salesforce-main/src/main/default/objects/Lead/fields/Course_of_Interest_Scoring_Band__c.field-meta.xml
<CustomField>
    <fullName>Course_of_Interest_Scoring_Band__c</fullName>
    <description>The Course of Interest values are banded so they can then be given a score</description>
    <label>Course of Interest Scoring Band</label>
    <length>10</length>
    <type>Text</type>
</CustomField>