salesforce-main/src/main/default/objects/Lead/fields/Creation_Date_Score__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date_Score__c</fullName>
    <description>Created Date lead score</description>
    <formula>IF ( ( NOW() - CreatedDate ) &lt;= 3, 120, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Date Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>