salesforce-main/src/main/default/objects/Lead/fields/Document_Storage_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_Storage_URL__c</fullName>
    <label>Document Storage URL</label>
    <type>Url</type>
</CustomField>