salesforce-main/src/main/default/objects/Lead/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email Opt In field in line with GDPR compliance. Linked to Marketing Cloud and student preference centre</description>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>