salesforce-main/src/main/default/objects/Lead/fields/Follow_up_on_Application_progression__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_on_Application_progression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-up on Application progression</label>
    <type>Checkbox</type>
</CustomField>