salesforce-main/src/main/default/objects/Lead/fields/GDPR_Modified__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Modified__c</fullName>
    <description>Contains date/time stamp of when data has been passed to the GDPR Opt In field. Used as trigger to update GDPR marketing contact preferences</description>
    <label>GDPR Modified</label>
    <type>DateTime</type>
</CustomField>