salesforce-main/src/main/default/objects/Lead/fields/Last_Activity_Score__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Score__c</fullName>
    <description>Last Activity lead score</description>
    <formula>IF( ( TODAY() - LastActivityDate ) &lt;= 60 , 50, 10 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>