salesforce-main/src/main/default/objects/Lead/fields/Lead_Bypass_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Lead_Bypass_Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be toggled during a save event. Evaluated by duplicate rules, if true then do not run duplicate rule</description>
    <label>Lead Bypass Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>