salesforce-main/src/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <label>ID Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>