salesforce-main/src/main/default/objects/Lead/fields/Lead_Score_fx__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_fx__c</fullName>
    <description>Aggregation of the lead score fields</description>
    <formula>Status_Score__c +
Lead_Type_Score__c +
Course_of_Interest_Score__c +
Start_Date_Score__c +
Lead_Subsource_Score__c +
Lead_Subsource_Recent_Score__c +
Last_Activity_Score__c +
Modified_Date_Score__c +
Creation_Date_Score__c +
Modified_By_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>