salesforce-main/src/main/default/objects/Lead/fields/Lead_Score_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Rating__c</fullName>
    <description>Rating based on lead score</description>
    <formula>IF( Lead_Score__c &gt;= 560, IMAGE( &quot;/img/samples/stars_500.gif&quot;, &quot;5 star rating&quot; ),
IF( Lead_Score__c &gt;= 500, IMAGE( &quot;/img/samples/stars_400.gif&quot;, &quot;4 star rating&quot; ),
IF( Lead_Score__c &gt;= 300, IMAGE( &quot;/img/samples/stars_300.gif&quot;, &quot;3 star rating&quot; ),
IF( Lead_Score__c &gt;= 100, IMAGE( &quot;/img/samples/stars_200.gif&quot;, &quot;2 star rating&quot; ),
IMAGE( &quot;/img/samples/stars_100.gif&quot;, &quot;1 star rating&quot; )))))</formula>
    <label>Lead Score Rating</label>
    <type>Text</type>
</CustomField>