salesforce-main/src/main/default/objects/Lead/fields/Lead_Source_Recent__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Recent__c</fullName>
    <label>Lead Source - Recent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>Walk-Ins</fullName>
            </value>
            <value>
                <fullName>Campaign Landing Page</fullName>
            </value>
            <value>
                <fullName>Direct Input</fullName>
            </value>
            <value>
                <fullName>3rd Party Website Traffic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>