salesforce-main/src/main/default/objects/Lead/fields/Lead_Source_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Timestamp__c</fullName>
    <description>Unbounce web page submission time</description>
    <label>Lead Source Timestamp</label>
    <type>DateTime</type>
</CustomField>