salesforce-main/src/main/default/objects/Lead/fields/Lead_Source_Title_Recent__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Title_Recent__c</fullName>
    <description>This field has been introduced due to the integration with Eloqua. This has prompted a change in business process for Leads - only 1 unique (email) Lead is allowed. This field has been added to compliment the Lead Source Title - containing the original lead source title value, this field will be updated with the most recent lead source title information.</description>
    <inlineHelpText>Select the most recent lead source title such as the webpage or event</inlineHelpText>
    <label>Lead Source Title - Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>