salesforce-main/src/main/default/objects/Lead/fields/Lead_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Detail__c</fullName>
    <description>Reason given for lead dropping out of pipeline or currently unable to progress</description>
    <label>Lead Status Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>TTMC</fullName>
            </value>
            <value>
                <fullName>Contact Request</fullName>
            </value>
            <value>
                <fullName>Lead Forensics</fullName>
            </value>
            <value>
                <fullName>Already Booked</fullName>
            </value>
            <value>
                <fullName>Request No Further Contact</fullName>
            </value>
            <value>
                <fullName>Ineligible (Academic)</fullName>
            </value>
            <value>
                <fullName>Ineligible (Language)</fullName>
            </value>
            <value>
                <fullName>Ineligible (Visa)</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Details</fullName>
            </value>
            <value>
                <fullName>Funding Restrictions</fullName>
            </value>
            <value>
                <fullName>Studying With Another Provider</fullName>
            </value>
            <value>
                <fullName>No Longer Interest In Studying</fullName>
            </value>
            <value>
                <fullName>Awaiting Results</fullName>
            </value>
            <value>
                <fullName>Re-sitting Course</fullName>
            </value>
            <value>
                <fullName>Ineligible - Occupation</fullName>
            </value>
            <value>
                <fullName>Course not Offered</fullName>
            </value>
            <value>
                <fullName>Marketing Enquiry</fullName>
            </value>
            <value>
                <fullName>Unable to Establish Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>