salesforce-main/src/main/default/objects/Lead/fields/Lead_Subsource__c.field-meta.xml
<CustomField>
    <fullName>Lead_Subsource__c</fullName>
    <label>Lead Subsource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>bpp.com</fullName>
            </value>
            <value>
                <fullName>bpplawschool.com</fullName>
            </value>
            <value>
                <fullName>bppbusiness.com</fullName>
            </value>
            <value>
                <fullName>careerbuilder.com</fullName>
            </value>
            <value>
                <fullName>independent.co.uk</fullName>
            </value>
            <value>
                <fullName>notgoingtouni.com</fullName>
            </value>
            <value>
                <fullName>studentroom.co.uk</fullName>
            </value>
            <value>
                <fullName>ucas.co.uk</fullName>
            </value>
            <value>
                <fullName>The Sunday Times</fullName>
            </value>
            <value>
                <fullName>The Independent</fullName>
            </value>
            <value>
                <fullName>The Times</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Evening Standard</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>UCAS fairs</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Press articles</fullName>
            </value>
            <value>
                <fullName>Unbounce</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Education Liaison</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>Incoming Email</fullName>
            </value>
            <value>
                <fullName>Incoming Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>