salesforce-main/src/main/default/objects/Lead/fields/Lead_Subsource_Recent__c.field-meta.xml
<CustomField>
    <fullName>Lead_Subsource_Recent__c</fullName>
    <description>This field has been introduced due to the integration with Eloqua. This has prompted a change in business process for Leads - only 1 unique (email) Lead is allowed. This field has been added to compliment the Lead Subource - containing the original lead subsource value, this field will be updated with the most recent lead subsource information.</description>
    <inlineHelpText>Select the most recent lead subsource</inlineHelpText>
    <label>Lead Subsource - Recent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition Callback</fullName>
            </value>
            <value>
                <fullName>Education Liason</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>Incoming Email</fullName>
            </value>
            <value>
                <fullName>Incoming Mail</fullName>
            </value>
            <value>
                <fullName>International Agents</fullName>
            </value>
            <value>
                <fullName>Lead Forensics</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Open Day</fullName>
            </value>
            <value>
                <fullName>Other Events</fullName>
            </value>
            <value>
                <fullName>Other Salesforce Lead</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Round Table</fullName>
            </value>
            <value>
                <fullName>Unbounce</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>