salesforce-main/src/main/default/objects/Lead/fields/Lead_Subsource_Recent_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Subsource_Recent_Score__c</fullName>
    <description>Lead Subsource - Rcent lead score</description>
    <formula>CASE ( Lead_Subsource_Recent__c,
&apos;Request a Callback&apos;, 170,
&apos;Scholarships&apos;, 50,
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Subsource Recent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>