salesforce-main/src/main/default/objects/Lead/fields/Lead_Type_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type_Score__c</fullName>
    <description>Record type lead score - student / business</description>
    <formula>IF ( RecordType.Name = &apos;Business Development&apos;, 100, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Type Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>