salesforce-main/src/main/default/objects/Lead/fields/Levy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Levy_Amount__c</fullName>
    <label>Levy Amount</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Available_Levy__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>£0-£100k</fullName>
            </value>
            <value>
                <fullName>£100K-£250k</fullName>
            </value>
            <value>
                <fullName>£250K-£500K</fullName>
            </value>
            <value>
                <fullName>500K-£1m</fullName>
            </value>
            <value>
                <fullName>£1m+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>